# llm-engg

./: .gitignore  README.md  SETUP.md  free-llms.md  google-llms.md  pyproject.toml
Knowledgebase/: google-llms.md
Level 1/: different-llm-providers.py
Level 1/company-brochure/: main.ipynb  main.py  using-gemini-main.ipynb
Level 1/gemini/: Hello.py
Level 1/llama/: memory_illusion.py  using_ollama.py  using_requests.py  using_requests1.py  using_requests2.py
Level 1/mistral/: hello.py
Level 1/tokenizer/: tokenizer_gpt2.py
Level1/gemini/: using_genai.py
Level1/llama/: hello.py  using_openai_sys_prompt1.py
Level1/mistral/: using_ollama.py  using_openai_sys_prompt1.py  using_openai_sys_prompt2.py  using_openai_sys_prompt3.py  using_requests.py
Level1/tokenizer/: tokenizer_gpt.py
Level2/chat-box/: gradio_chat.ipynb  gradio_chat.py  gradio_demo.ipynb  streaming-chat-bot.ipynb
Level2/chat-bw-llms/: gemini-conversation-.ipynb  gemini-vs-gemma.ipynb  llama-conversation-.ipynb
Level2/langchain/: langchain.ipynb
Level2/lightLLM/: lightllm-promt-caching.ipynb  lightllm.ipynb
Level2/models-capablity/: dilemma_puzzle.ipynb  easy_puzzle.ipynb  hard_puzzle.ipynb  llm-capablity.ipynb
Level2/multimodel/: audio_chart_for_hf.py  audio_chat.py  audio_generation.py  flight-assistance-audio_advanced.py  flight_assistance_audio_basic.py  image_generation.py  image_generation_HF.py  image_generation_gradio.py  multi_model.py
Level2/tools/: flight-assistance-multitool.py  flight-assistance-multitool2.py  flight-assistance-sqlite.ipynb  flight-assistance.ipynb
Level3/: HF_Google_Colab.ipynb  MOM.ipynb  generate_dataset.ipynb  microsoft_tokenizers.ipynb  models.ipynb  mom.ipynb  movie_name_generator.py  movie_title_generator.ipynb  pipelines.ipynb  tokenizers.ipynb
Level3/visualizer/: token_visualizer.ipynb
Level4/code-porting/: python_to_cpp.ipynb  python_to_cpp.py  python_to_java.py
Level5/commons/: response_sanitizer.py
Q&A/: local-vs-cloud.md
llama/: system_prompt_example1.py  system_prompt_example2.py  system_prompt_example3.py
llama/level1/: hello.py  (+1 more)
(+22 files in other folders)
