[project]
name = "llm-engg"
version = "0.1.0"
description = "demo project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=2.3.0",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.2.1",
    "litellm>=1.85.0",
    "load-dotenv>=0.1.0",
    "ollama>=0.6.2",
    "openai>=2.33.0",
    "requests>=2.33.1",
    "tiktoken>=0.12.0",
    "transformers>=5.7.0",
]
